<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FourGoats</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="checkins">Checkins</string>
    <string name="rewards">Rewards</string>
    <string name="friends">Friends</string>
    <string name="history">History</string>
    <string name="edit_preferences">Edit Preferences</string>
    <string name="profile">Profile</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="auto_checkin">Auto Checkin Enabled</string>
    <string name="public_profile">Public Profile</string>
    <string name="home">Home</string>
    <string name="checkin">Check In</string>
    <string name="checkin_now">Check In Now</string>
    <string name="add_venue">Add Venue</string>
    <string name="add_and_checkin">Add Venue and Check In</string>
    <string name="venue_name">Venue Name</string>
    <string name="venue_website">Venue Website</string>
    <string name="view_checkin">View Checkin</string>
    <string name="my_friends">My Friends</string>
    <string name="last_checkin">Last Checkin</string>
    <string name="search_for_friends">Search For Friends</string>
    <string name="request_as_friend">Request As Friend</string>
    <string name="pending_friend_requests">Pending Friend Requests</string>
    <string name="friend_request">Friend Request</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accept_request_yes_no">Accept Friend Request?</string>
    <string name="my_rewards">My Rewards</string>
    <string name="available_rewards">Available Rewards</string>
    <string name="preferences">Preferences</string>
    <string name="my_profile">My Profile</string>
    <string name="remember_me">Remember Me</string>
    <string name="about">About</string>
    <string name="no_rewards">You don\'t have any rewards =(</string>
    <string name="no_friends">You don\'t have any friends =(</string>
    <string name="no_pending_friend_requests">There are no pending requests</string>
    <string name="send_sms">Send SMS</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    <string name="comment">Comment</string>
    <string name="post_comment">Post Comment</string>
    <string name="view_history">View Checkin History</string>
    <string name="destination_info">Destination Info</string>
    <string name="host">Host (Or IP)</string>
    <string name="port">HTTPS Port (Default:10000)</string>
    <string name="save">Save</string>
    <string name="developer_name">App Developer: Jack Mannino</string>
    <string name="ui_developer">UI Developer: Walter Tighzert</string>
    <string name="logo_designer">Logo Designer: Anthony Ferreira</string>
    <string name="version">Version 0.9</string>
    <string name="reset_now">Reset Now</string>
    <string name="reset_user_password">Reset User Password</string>
    <string name="reset_user_passwords">Reset User Passwords</string>
    <string name="delete_users">Delete Users</string>
    <string name="admin_home">Admin Home</string>
    <string name="authenticate">Authenticate</string>
    <string name="admin_options">Admin Options</string>
    <string name="proxy_host">Proxy Host</string>
    <string name="proxy_port">Proxy Port</string>
	<string name="manage_users">Manage Users</string>
	<string name="mobile_project">OWASP Mobile Security Project</string>
	<string name="no_checkins">You have never checked in anywhere. You should try it sometime, it\'s fun!</string>
    <string-array name="home_items">
        <item>Checkins</item>
        <item>Friends</item>
        <item>Rewards</item>
    </string-array>
    <string-array name="admin_home_items">
        <item>Checkins</item>
        <item>Friends</item>
        <item>Rewards</item>
        <item>Manage Users</item>
    </string-array>
    <string-array name="rewards_items">
        <item>My Rewards</item>
        <item>Available Rewards</item>
    </string-array>
    <string-array name="checkin_items">
        <item>Checkin Now</item>
        <item>History</item>
    </string-array>
    <string-array name="friends_items">
        <item>My Friends</item>
        <item>Search For Friends</item>
        <item>Pending Friend Requests</item>
    </string-array>
    <string-array name="admin_options_items">
        <item>Reset User Passwords</item>
        <item>Delete Users</item>
    </string-array>

</resources>