<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:text="@string/version" >
    </TextView>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:text="@string/mobile_project" >
    </TextView>

    <TextView
        android:id="@+id/textView3"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:text="@string/developer_name" >
    </TextView>

    <TextView
        android:id="@+id/textView4"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:text="@string/ui_developer" >
    </TextView>

    <TextView
        android:id="@+id/textView5"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:text="@string/logo_designer" >
    </TextView>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dip"
        android:src="@drawable/owasp_logo" >
    </ImageView>

</LinearLayout>