<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/firstName"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:text="@string/first_name" >
    </TextView>

    <EditText
        android:id="@+id/firstNameEdit"
        style="@style/TextFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="" >
    </EditText>

    <TextView
        android:id="@+id/lastName"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/last_name" >
    </TextView>

    <EditText
        android:id="@+id/lastNameEdit"
        style="@style/TextFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="" >
    </EditText>

    <TextView
        android:id="@+id/userName"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/username" >
    </TextView>

    <EditText
        android:id="@+id/userNameEdit"
        style="@style/TextFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="" >
    </EditText>

    <TextView
        android:id="@+id/password"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/password" >
    </TextView>

    <EditText
        android:id="@+id/passwordEdit"
        style="@style/TextFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:password="true"
        android:text="" >
    </EditText>

    <TextView
        android:id="@+id/confirmPassword"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirm_password" >
    </TextView>

    <EditText
        android:id="@+id/confirmPasswordEdit"
        style="@style/TextFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:password="true"
        android:text="" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="200dip"
        android:layout_height="25dip"
        android:layout_gravity="center"
        android:layout_marginTop="20dip"
        android:background="@drawable/standard_button"
        android:onClick="submitRegistration"
        android:text="@string/register"
        android:textColor="#FFFFFF" >
    </Button>

</LinearLayout>