<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="150dip"
        android:background="@drawable/alt_background"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/publicProfileCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/public_profile" >
        </CheckBox>

        <CheckBox
            android:id="@+id/autoCheckinCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:text="@string/auto_checkin" >
        </CheckBox>
    </LinearLayout>

    <Button
        android:id="@+id/publicProfileCheckBox"
        android:layout_width="200dip"
        android:layout_height="25dip"
        android:layout_gravity="center"
        android:layout_marginTop="15dip"
        android:background="@drawable/standard_button"
        android:onClick="submitChanges"
        android:text="@string/submit"
        android:textColor="#FFFFFF" >
    </Button>

</LinearLayout>