<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView3"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:text="@string/username" >
    </TextView>

    <EditText
        android:id="@+id/userNameEditText"
        style="@style/TextFont"
        android:editable="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#D8D8D8"
        android:gravity="center"
        android:text="" >
    </EditText>

    <TextView
        android:id="@+id/textView1"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:text="@string/password" >
    </TextView>

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/TextFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#D8D8D8"
        android:gravity="center"
        android:text="" >
    </EditText>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:text="@string/confirm_password" >
    </TextView>

    <EditText
        android:id="@+id/passwordConfirmEditText"
        style="@style/TextFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#D8D8D8"
        android:gravity="center"
        android:text="" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="200dip"
        android:layout_height="25dip"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:background="@drawable/standard_button"
        android:onClick="doPasswordReset"
        android:text="@string/reset_now"
        android:textColor="#FFFFFF" >
    </Button>

</LinearLayout>