<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dip"
        android:orientation="horizontal" >

        <Button
            style="@style/TextFont"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000000"
            android:drawableTop="@drawable/home_checkin"
            android:onClick="launchCheckins"
            android:text="@string/checkins" />

        <Button
            style="@style/TextFont"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000000"
            android:drawableTop="@drawable/home_friends"
            android:onClick="launchFriends"
            android:text="@string/friends" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dip"
        android:orientation="horizontal" >

        <Button
            style="@style/TextFont"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000000"
            android:drawableTop="@drawable/home_rewards"
            android:onClick="launchRewards"
            android:text="@string/rewards" />

        <View
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>