<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/userName"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:text="" >
    </TextView>

    <TextView
        android:id="@+id/fullName"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" >
    </TextView>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/accept_request_yes_no" >
    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >

        <Button
            android:id="@+id/button1"
            android:layout_width="100dip"
            android:layout_height="25dip"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:background="@drawable/standard_button"
            android:onClick="acceptFriendRequest"
            android:text="@string/yes"
            android:textColor="#FFFFFF" >
        </Button>

        <Button
            android:id="@+id/button2"
            android:layout_width="100dip"
            android:layout_height="25dip"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:background="@drawable/standard_button"
            android:onClick="denyFriendRequest"
            android:text="@string/no"
            android:textColor="#FFFFFF" >
        </Button>
    </LinearLayout>

</LinearLayout>